css/style.css
.bg-black {
  background-color: black;
}

.font-div {
  width: 40%;
}

img {
  width: 100%;
  height: 100%;
}

.btn {
  color: white;
}

.btn:hover {
  color: lightblue;
}

#quoteDisplay {
  height: 30%;
  width: 100%;
  background-color: lightblue;
  text-align: center;
  font-size: 20px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.linkColor {
 color: black;
}

/*/// Responsive ///*/

@media only screen and (min-width: 1198px) {
  .font-div {
    padding: 90px 0px !important;
  }
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {

}

